--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,7 @@ body{
   height: 100%;
 }
 
-.niketitle1{
+.landing-title1{
     position: absolute;
     top: -10vw;
     left: 0;
@@ -53,12 +53,11 @@ body{
     text-transform: uppercase;
     font-family: 'Tilt Warp', cursive;
     font-style: italic;
-    letter-spacing: 10px;
 }
 
-.niketitle2{
+.landing-title2{
   position: absolute;
-  top: 0;
+  top: -4vw;
   left: 25vw;
   height: 100%;
   width: 50%;
@@ -69,21 +68,23 @@ body{
   font-family:Arial, Helvetica, sans-serif ;
   font-style: italic;
   font-weight:100;
+  font-size: 1.2vw;
 }
 
 .landing-btn{
   position:absolute;
   color: #fff;
-  top: 34vw;
-  left: 37vw;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
   display: flex;
-  font-size: 1.5vw;
+  font-size: 1.2vw;
   text-transform: uppercase;
   font-family: 'Tilt Warp', cursive;
   font-style: italic;
   background-color: transparent;
   border-radius: 25px;
-  padding: 10px;
+  padding: 0.5vw;
   border-color: #fff;
 }
   /*Tranding*/
@@ -100,6 +101,13 @@ body{
     color: #e2cfcf;
   }
 
+  .card-text{
+    font-size: 1.25vw;
+  }
+
+  .card-title{
+    font-size: 1.75vw;
+  }
 
   /*essential*/
 
@@ -127,7 +135,6 @@ body{
     text-transform: uppercase;
     font-family: 'Tilt Warp', cursive;
     font-style: italic;
-    letter-spacing: 10px;
   }
 
   .banner-title2{
@@ -143,7 +150,7 @@ body{
     font-family:Arial, Helvetica, sans-serif ;
     font-style: italic;
     font-weight:100;
-  
+    font-size: 1.2vw;
   }
  
   /*Footer*/
